--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.9.0",
     "@types/reflect-metadata": "^0.1.0",
+    "@types/swagger-ui-express": "^4.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
@@ -27,9 +29,11 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
+    "swagger-ui-express": "^5.0.1",
     "tsoa": "^6.5.1",
     "typeorm": "^0.3.20",
     "winston": "^3.17.0"
